syntax = "proto3";

service PMasterService {
	rpc Register (RegisterRequest) returns (RegisterReply);
}
message RegisterRequest {
	string id = 1;
	NodeType type = 2;
}
message RegisterReply {
}
enum NodeType {
    SERVER = 0;
    CLIENT = 1;
}