syntax = "proto3";

service PNodeService {
    rpc RegisterServers (RegisterServersRequest) returns (RegisterServersReply);
    rpc RegisterPartitions (RegisterPartitionsRequest) returns (RegisterPartitionsReply);
    rpc Status (StatusRequest) returns (StatusReply);
}
message RegisterServersRequest {
    repeated ServerInfo info = 1;
}
message RegisterServersReply {
}
message RegisterPartitionsRequest {
    repeated PartitionInfo info = 1;
}
message RegisterPartitionsReply {
}
message StatusRequest {
}
message StatusReply {
}
message PartitionInfo {
    string partition_id = 1;
    repeated string server_ids = 2;
}
message ServerInfo {
    string id = 1;
    string url = 2;
}
