syntax = "proto3";
import "protos/GServer.proto";

service SHelperService {
  rpc AnnounceMaster (AnnounceMasterRequest) returns (AnnounceMasterReply);
  rpc WriteData (WriteDataRequest) returns (WriteDataReply);
}
message AnnounceMasterRequest { 
  string server_id = 1;
  string partition_id = 2;
}
message AnnounceMasterReply {
  bool ok = 1;
}
message WriteDataRequest {
  string partition_id = 1;
  string object_id = 2;
  Object new_object = 3;
  int32 version = 4;
}
message WriteDataReply {
  bool ok = 1;
}